--- a/microservice-commandes.properties
+++ b/microservice-commandes.properties
@@ -6,4 +6,4 @@ spring.h2.console.enabled=true
 spring.datasource.sql-script-encoding=UTF-8
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
