--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -9,4 +9,4 @@ spring.datasource.sql-script-encoding=UTF-8
 mes-configs.limitDeProduits=10
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
